--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -8,84 +8,154 @@
         <variable
             name="viewModel"
             type="com.frank.mindvalley.ui.channels.ChannelsViewModel" />
+
+        <import type="android.view.View" />
+
     </data>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:background="#23272F"
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#23272F"
+        android:fitsSystemWindows="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 android:orientation="vertical"
                 tools:context=".ui.channels.ChannelsFragment">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="56dp"
-                    android:fontFamily="@font/roboto_black"
-                    android:text="@string/channel"
-                    android:textColor="#C1C1C1"
-                    android:textSize="30sp" />
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="#80000000"
+                    android:clickable="false"
+                    android:visibility="@{ viewModel.loadingData ? View.VISIBLE : View.GONE }"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="30dp"
-                    android:fontFamily="@font/roboto_bold"
-                    android:text="@string/new_episodes"
-                    android:textColor="#95989D"
-                    android:textSize="20sp" />
+                    <ProgressBar
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_centerInParent="true" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcvNewEpisodes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20sp"
-                    android:layout_marginTop="15dp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="27dp"
-                    android:background="#3C434E" />
+                </RelativeLayout>
 
                 <LinearLayout
-                    android:id="@+id/llChannels"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:visibility="@{ viewModel.loadingData ? View.INVISIBLE : View.VISIBLE }"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="30dp"
-                    android:fontFamily="@font/roboto_bold"
-                    android:text="@string/browse_by_categories"
-                    android:textColor="#95989D"
-                    android:textSize="20sp" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="56dp"
+                        android:fontFamily="@font/roboto_black"
+                        android:text="@string/channel"
+                        android:textColor="#C1C1C1"
+                        android:textSize="30sp" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcvCategories"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20sp"
-                    android:layout_marginBottom="46dp"
-                    android:layout_marginTop="15dp" />
-            </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:minHeight="100dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="30dp"
+                            android:fontFamily="@font/roboto_bold"
+                            android:text="@string/new_episodes"
+                            android:textColor="#95989D"
+                            android:textSize="20sp"
+                            android:visibility="@{ viewModel.isEmptyNewEpisodes() ? View.GONE : View.VISIBLE}" />
+
+                        <ProgressBar
+                            android:layout_width="44dp"
+                            android:layout_height="44dp"
+                            android:layout_gravity="center"
+                            android:visibility="@{viewModel.isEmptyNewEpisodes() ? View.VISIBLE : View.GONE}" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rcvNewEpisodes"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20sp"
+                            android:layout_marginTop="15dp" />
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="27dp"
+                            android:background="#3C434E" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/llChannels"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:minHeight="200dp"
+                        android:orientation="vertical">
+
+                        <ProgressBar
+                            android:layout_width="44dp"
+                            android:layout_height="44dp"
+                            android:layout_centerInParent="true"
+                            android:layout_gravity="center"
+                            android:visibility="@{viewModel.loadingChannels ? View.VISIBLE : View.GONE}" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="30dp"
+                            android:fontFamily="@font/roboto_bold"
+                            android:text="@string/browse_by_categories"
+                            android:textColor="#95989D"
+                            android:textSize="20sp"
+                            android:visibility="@{viewModel.isEmptyCategories() ? View.GONE : View.VISIBLE}" />
+
+                        <ProgressBar
+                            android:layout_width="44dp"
+                            android:layout_height="44dp"
+                            android:layout_gravity="center"
+                            android:visibility="@{viewModel.isEmptyNewEpisodes() ? View.VISIBLE : View.GONE}" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rcvCategories"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20sp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginBottom="46dp" />
+                    </LinearLayout>
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
